tests/ui/cast/ptr-to-trait-obj-wrap-add-auto.stderr
error[E0277]: the trait bound `W<(dyn A + 'static)>: A` is not satisfied
  --> $DIR/ptr-to-trait-obj-wrap-add-auto.rs:12:5
   |
LL |     a as _
   |     ^ the trait `A` is not implemented for `W<(dyn A + 'static)>`
   |
help: this trait has no implementations, consider adding one
  --> $DIR/ptr-to-trait-obj-wrap-add-auto.rs:6:1
   |
LL | trait A {}
   | ^^^^^^^
   = note: required for the cast from `*const W<(dyn A + 'static)>` to `*const dyn A + Send`

error[E0277]: `(dyn A + 'static)` cannot be sent between threads safely
  --> $DIR/ptr-to-trait-obj-wrap-add-auto.rs:12:5
   |
LL |     a as _
   |     ^ `(dyn A + 'static)` cannot be sent between threads safely
   |
   = help: within `W<(dyn A + 'static)>`, the trait `Send` is not implemented for `(dyn A + 'static)`
note: required because it appears within the type `W<(dyn A + 'static)>`
  --> $DIR/ptr-to-trait-obj-wrap-add-auto.rs:8:8
   |
LL | struct W<T: ?Sized>(T);
   |        ^
   = note: required for the cast from `*const W<(dyn A + 'static)>` to `*const dyn A + Send`

error[E0277]: the size for values of type `(dyn A + 'static)` cannot be known at compilation time
  --> $DIR/ptr-to-trait-obj-wrap-add-auto.rs:12:5
   |
LL |     a as _
   |     ^ doesn't have a size known at compile-time
   |
   = help: within `W<(dyn A + 'static)>`, the trait `Sized` is not implemented for `(dyn A + 'static)`
note: required because it appears within the type `W<(dyn A + 'static)>`
  --> $DIR/ptr-to-trait-obj-wrap-add-auto.rs:8:8
   |
LL | struct W<T: ?Sized>(T);
   |        ^
   = note: required for the cast from `*const W<(dyn A + 'static)>` to `*const dyn A + Send`

error[E0277]: the trait bound `W<(dyn A + 'static)>: A` is not satisfied
  --> $DIR/ptr-to-trait-obj-wrap-add-auto.rs:19:5
   |
LL |     a as _
   |     ^ the trait `A` is not implemented for `W<(dyn A + 'static)>`
   |
help: this trait has no implementations, consider adding one
  --> $DIR/ptr-to-trait-obj-wrap-add-auto.rs:6:1
   |
LL | trait A {}
   | ^^^^^^^
   = note: required for the cast from `*const W<W<(dyn A + 'static)>>` to `*const W<dyn A + Send>`

error[E0277]: `(dyn A + 'static)` cannot be sent between threads safely
  --> $DIR/ptr-to-trait-obj-wrap-add-auto.rs:19:5
   |
LL |     a as _
   |     ^ `(dyn A + 'static)` cannot be sent between threads safely
   |
   = help: within `W<(dyn A + 'static)>`, the trait `Send` is not implemented for `(dyn A + 'static)`
note: required because it appears within the type `W<(dyn A + 'static)>`
  --> $DIR/ptr-to-trait-obj-wrap-add-auto.rs:8:8
   |
LL | struct W<T: ?Sized>(T);
   |        ^
   = note: required for the cast from `*const W<W<(dyn A + 'static)>>` to `*const W<dyn A + Send>`

error[E0277]: the size for values of type `(dyn A + 'static)` cannot be known at compilation time
  --> $DIR/ptr-to-trait-obj-wrap-add-auto.rs:19:5
   |
LL |     a as _
   |     ^ doesn't have a size known at compile-time
   |
   = help: within `W<(dyn A + 'static)>`, the trait `Sized` is not implemented for `(dyn A + 'static)`
note: required because it appears within the type `W<(dyn A + 'static)>`
  --> $DIR/ptr-to-trait-obj-wrap-add-auto.rs:8:8
   |
LL | struct W<T: ?Sized>(T);
   |        ^
   = note: required for the cast from `*const W<W<(dyn A + 'static)>>` to `*const W<dyn A + Send>`

error[E0804]: cannot add auto trait `Send` to dyn bound via pointer cast
  --> $DIR/ptr-to-trait-obj-wrap-add-auto.rs:26:5
   |
LL |     a as _
   |     ^^^^^^ unsupported cast
   |
   = note: this could allow UB elsewhere
   = help: use `transmute` if you're sure this is sound

error[E0804]: cannot add auto trait `Send` to dyn bound via pointer cast
  --> $DIR/ptr-to-trait-obj-wrap-add-auto.rs:31:5
   |
LL |     a as _
   |     ^^^^^^ unsupported cast
   |
   = note: this could allow UB elsewhere
   = help: use `transmute` if you're sure this is sound

error[E0804]: cannot add auto trait `Send` to dyn bound via pointer cast
  --> $DIR/ptr-to-trait-obj-wrap-add-auto.rs:36:5
   |
LL |     a as _
   |     ^^^^^^ unsupported cast
   |
   = note: this could allow UB elsewhere
   = help: use `transmute` if you're sure this is sound

error: aborting due to 9 previous errors

Some errors have detailed explanations: E0277, E0804.
For more information about an error, try `rustc --explain E0277`.
